# hexcell

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
editor/: CMakeLists.txt  editor.cpp
include/: application.h  hexcell.h  hexcell_api.h
samples/: CMakeLists.txt
source/: hexcell.cpp
source/editor/: editor.cpp
